--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,244 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>800</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>DICOM Reader - 医学图像查看器</string>
+   <string>VTK Qt 项目</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="mainVerticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="buttonLayout">
-      <item>
-       <widget class="QPushButton" name="loadButton">
-        <property name="text">
-         <string>选择DICOM文件夹</string>
-        </property>
-        <property name="maximumHeight">
-         <number>40</number>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="loadNiftiButton">
-        <property name="text">
-         <string>选择NIFTI文件</string>
-        </property>
-        <property name="maximumHeight">
-         <number>40</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QWidget" name="viewsWidget" native="true">
+     <widget class="QWidget" name="vtkWidget" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <property name="spacing">
-        <number>5</number>
-       </property>
-       <!-- 左上：轴位视图 -->
-       <item row="0" column="0">
-        <widget class="QWidget" name="axialViewWidget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>300</width>
-           <height>300</height>
-          </size>
-         </property>
-         <layout class="QVBoxLayout" name="axialLayout">
-          <item>
-           <widget class="QLabel" name="axialLabel">
-            <property name="text">
-             <string>轴位视图 (Axial) - 切片: 0/0</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="styleSheet">
-             <string>QLabel { background-color: #2c3e50; color: white; padding: 5px; }</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" name="axialVtkWidget" native="true">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSlider" name="axialSlider">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="value">
-             <number>0</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <!-- 右上：冠状视图 -->
-       <item row="0" column="1">
-        <widget class="QWidget" name="coronalViewWidget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>300</width>
-           <height>300</height>
-          </size>
-         </property>
-         <layout class="QVBoxLayout" name="coronalLayout">
-          <item>
-           <widget class="QLabel" name="coronalLabel">
-            <property name="text">
-             <string>冠状视图 (Coronal) - 切片: 0/0</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="styleSheet">
-             <string>QLabel { background-color: #27ae60; color: white; padding: 5px; }</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" name="coronalVtkWidget" native="true">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSlider" name="coronalSlider">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="value">
-             <number>0</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <!-- 左下：矢状视图 -->
-       <item row="1" column="0">
-        <widget class="QWidget" name="sagittalViewWidget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>300</width>
-           <height>300</height>
-          </size>
-         </property>
-         <layout class="QVBoxLayout" name="sagittalLayout">
-          <item>
-           <widget class="QLabel" name="sagittalLabel">
-            <property name="text">
-             <string>矢状视图 (Sagittal) - 切片: 0/0</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="styleSheet">
-             <string>QLabel { background-color: #e74c3c; color: white; padding: 5px; }</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" name="sagittalVtkWidget" native="true">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSlider" name="sagittalSlider">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="value">
-             <number>0</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <!-- 右下：3D体积视图 -->
-       <item row="1" column="1">
-        <widget class="QWidget" name="volumeViewWidget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>300</width>
-           <height>300</height>
-          </size>
-         </property>
-         <layout class="QVBoxLayout" name="volumeLayout">
-          <item>
-           <widget class="QLabel" name="volumeLabel">
-            <property name="text">
-             <string>3D表面重建 (Surface Reconstruction)</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="styleSheet">
-             <string>QLabel { background-color: #8e44ad; color: white; padding: 5px; }</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" name="volumeVtkWidget" native="true">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
      </widget>
     </item>
    </layout>
@@ -253,7 +32,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
+     <width>800</width>
      <height>21</height>
     </rect>
    </property>
@@ -261,9 +40,6 @@
     <property name="title">
      <string>文件(&amp;F)</string>
     </property>
-    <addaction name="action_Open"/>
-    <addaction name="action_OpenNifti"/>
-    <addaction name="separator"/>
     <addaction name="action_Q"/>
    </widget>
    <widget class="QMenu" name="menu_H">
@@ -283,7 +59,7 @@
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
-   <addaction name="action_Open"/>
+   <addaction name="action_S"/>
    <addaction name="action_Q"/>
   </widget>
   <action name="action_Q">
@@ -299,23 +75,19 @@
     <string>关于(&amp;A)</string>
    </property>
   </action>
-  <action name="action_Open">
+  <action name="action_S">
    <property name="text">
-    <string>打开DICOM序列(&amp;O)</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
-   </property>
-  </action>
-  <action name="action_OpenNifti">
-   <property name="text">
-    <string>打开NIFTI文件(&amp;N)</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+N</string>
+    <string>创建球体(&amp;S)</string>
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QVTKWidget</class>
+   <extends>QWidget</extends>
+   <header>QVTKWidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
-</ui>
+</ui> 
